# ChowMatrix

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  mac_builds.sh  setup.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml  labeler.yml
.github/workflows/: auto-format.yml  cmake.yml  ios.yml  manual.yml
installers/mac/: ChowMatrix.pkgproj  Intro.txt  build_mac_installer.sh
installers/windows/: ChowMatrix_Install_Script.iss  ChowMatrix_Install_Script_32bit.iss  build_win_installer.sh
manual/: .gitignore  ChowMatrixManual.tex  Makefile
modules/: CMakeLists.txt  WarningFlags.cmake
modules/cmake/: WarningFlags.cmake  pluginval.cmake
modules/polylogarithm/: CMakeLists.txt  Li2.cpp  Li2.hpp
res/: CMakeLists.txt  gui.xml  gui_ios.xml
res/presets/: Chord.chowpreset  Crazy.chowpreset  Default.chowpreset  Lush.chowpreset  Rhythmic.chowpreset  Wobble.chowpreset  Wonky.chowpreset
scripts/: aax_builds.sh  ios_build.sh  mac_builds.sh  validate.sh  win_builds.sh
src/: CMakeLists.txt  ChowMatrix.cpp  ChowMatrix.h  NodeListener.h  NodeManager.cpp  NodeManager.h  clang-test.cpp  pch.h
src/dsp/: BaseNode.cpp  BaseNode.h  DelayNode.cpp  DelayNode.h  DelayProc.cpp  DelayProc.h  Distortion.cpp  Distortion.h  InputNode.cpp  InputNode.h  InsanityControl.cpp  InsanityControl.h  LookupTables.cpp  LookupTables.h  ParamHelpers.cpp  ParamHelpers.h  ProcessorBase.h  ProcessorChain.h
src/dsp/Delay/: DelayProc.cpp  DelayProc.h  DelayStore.h  DelaySyncUtils.h  Diffusion.cpp  Diffusion.h  PitchShiftWrapper.cpp  PitchShiftWrapper.h  Reverser.cpp  Reverser.h  TempoSyncUtils.h  VariableDelay.cpp  VariableDelay.h
src/dsp/Distortion/: Distortion.cpp  Distortion.h  LookupTables.cpp  LookupTables.h
src/dsp/Parameters/: BaseController.cpp  BaseController.h  DelayTypeControl.cpp  DelayTypeControl.h  HostParamControl.cpp  HostParamControl.h  InsanityControl.cpp  InsanityControl.h  InsanityLockHelper.cpp  InsanityLockHelper.h  NodeParamControl.cpp  NodeParamControl.h  ParamHelpers.cpp  ParamHelpers.h  ParamLockHelper.cpp  ParamLockHelper.h  RandomiseLockHelper.cpp  RandomiseLockHelper.h  SyncControl.cpp  SyncControl.h
src/gui/: AutoUpdating.cpp  AutoUpdating.h  DelayNodeComponent.cpp  DelayNodeComponent.h  GraphView.cpp  GraphView.h  InputNodeComponent.h  InsanityLNF.h  NodeCompManager.cpp  NodeCompManager.h  NodeComponent.cpp  NodeComponent.h  NodeInfo.h  ParamSlider.cpp  ParamSlider.h  ScreenshotHelper.cpp  ScreenshotHelper.h
src/gui/BottomBar/: ABComp.cpp  ABComp.h  BottomBarLNF.cpp  BottomBarLNF.h  HostControlMenu.cpp  HostControlMenu.h  HostControlMenuComp.cpp  HostControlMenuComp.h  SettingsButton.cpp  SettingsButton.h  TextSlider.h  TextSliderItem.h  WetGainSlider.h
src/gui/DetailsView/: NodeDetails.cpp  NodeDetails.h  NodeDetailsComponent.cpp  NodeDetailsComponent.h  NodeDetailsGUI.cpp  NodeDetailsGUI.h  NodeDetailsViewport.cpp  NodeDetailsViewport.h
src/gui/IOSUtils/: LongPressActionHelper.cpp  LongPressActionHelper.h  PopupMenuOptionsHelpers.h  TipJar.cpp  TipJar.h  TwoFingerDragToScrollListener.h
src/gui/MatrixView/: DelayNodeComponent.cpp  DelayNodeComponent.h  GraphView.cpp  GraphView.h  GraphViewItem.h  GraphViewport.cpp  GraphViewport.h  InputNodeComponent.h  MatrixAurora.cpp  MatrixAurora.h  NodeCompManager.cpp  NodeCompManager.h  NodeComponent.cpp  NodeComponent.h
src/headless/: CMakeLists.txt  PresetResaver.cpp  SaveLoadSpeedTest.cpp  SaveLoadSpeedTest.h  ScreenshotGenerator.cpp  ScreenshotGenerator.h  main.cpp
src/headless/UnitTests/: DelayClearTest.cpp  HostControlTest.cpp  PerformanceTest.cpp  SaveLoadSpeedTest.cpp  UnitTests.h
src/presets/: Preset.h  PresetComp.cpp  PresetCompItem.h  PresetManager.cpp  PresetManager.h  PresetsLNF.h
src/state/: ABComp.h  PresetManager.cpp  PresetManager.h  StateManager.cpp  StateManager.h
src/state/presets/: PresetComp.cpp  PresetComp.h  PresetCompItem.h  PresetManager.cpp  PresetManager.h  PresetsLNF.h
